--- a/index.html
+++ b/index.html
@@ -24,21 +24,25 @@
       <img src="asset/img/profile.jpg" alt="Sharif Ahsan">
     </div>
     <h1>Jobaer Hossain</h1>
-    <p>Technical Support Specialist</p>
+    <p>Technical Support Specialist & Technical Trainer</p>
 
     <div class="social-icons">
       <a href="https://www.facebook.com/jbhs.info" target="_blank"><i class="fab fa-facebook-f"></i></a>
       <a href="https://x.com/hsjobaerlis" target="_blank"><i class="fab fa-twitter"></i></a>
       <a href="https://www.linkedin.com/in/hsjb/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
       <a href="https://www.instagram.com/jbhs.info/" target="_blank"><i class="fab fa-instagram"></i></a>
-	    <a href="https://wa.me/01575267698" target="_blank"><i class="fab fa-whatsapp"></i></a>
+	    <!-- <a href="https://wa.me/01575267698" target="_blank"><i class="fab fa-whatsapp"></i></a> -->
 	    <a href="https://t.me/hsjb_info" target="_blank"><i class="fab fa-telegram"></i></a>
+      <a href="https://discordapp.com/users/hsjobaerlisedu" target="_blank"><i class="fab fa-discord"></i></a>
     </div>
 
     <div class="buttons">
-      <a href="#" class="btn">Contact Me</a>
-      <a href="#" class="btn intro"><i class="fas fa-play"></i> Intro</a>
+      <a href="path-to-your-resume.pdf" download class="btn"><i class="fas fa-download"></i> Resume </a>
+      <a href="contact.html" class="btn" target="_blank"><i class="fab fa-whatsapp"></i> Contact Me</a>
+      <!-- <a href="#" class="btn intro"><i class="fas fa-play"></i> Intro</a> -->
     </div>
+
+    <!-- Resume Download Button -->
 
     <!-- Next Page Button -->
     <div class="next-page-button">
