--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
 
     <div class="social-icons">
       <a href="https://www.facebook.com/jbhs.info" target="_blank"><i class="fab fa-facebook-f"></i></a>
-      <a href="https://x.com/hsjobaerlis" target="_blank"><i class="fab fa-twitter"></i></a>
+<!--       <a href="https://x.com/hsjobaerlis" target="_blank"><i class="fab fa-twitter"></i></a> -->
       <a href="https://www.linkedin.com/in/hsjb/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
       <a href="https://www.instagram.com/jbhs.info/" target="_blank"><i class="fab fa-instagram"></i></a>
-	    <!-- <a href="https://wa.me/01575267698" target="_blank"><i class="fab fa-whatsapp"></i></a> -->
+	<a href="https://wa.me/01575267698" target="_blank"><i class="fab fa-whatsapp"></i></a>
 	    <a href="https://t.me/hsjb_info" target="_blank"><i class="fab fa-telegram"></i></a>
       <a href="https://discordapp.com/users/hsjobaerlisedu" target="_blank"><i class="fab fa-discord"></i></a>
     </div>
