--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </div>
 
     <div class="buttons">
-      <a href="path-to-your-resume.pdf" download class="btn"><i class="fas fa-download"></i> Resume </a>
+      <a href="https://flowcv.com/resume/phafog0rh9" download class="btn"><i class="fas fa-download"></i> Resume </a>
       <a href="contact.html" class="btn" target="_blank"><i class="fab fa-whatsapp"></i> Contact Me</a>
       <!-- <a href="#" class="btn intro"><i class="fas fa-play"></i> Intro</a> -->
     </div>
