project structure changed

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
     <!-- Next Page Button -->
     <div class="next-page-button">
-      <a href="resume.html" class="btn next-btn"><i class="fas fa-arrow-down"></i>
+      <a href="pages/resume.html" class="btn next-btn"><i class="fas fa-arrow-down"></i>
       </a>
     </div>
   </div>
