--- a/index.html
+++ b/index.html
@@ -23,46 +23,26 @@
   <body>
     <div class="container">
       <div class="profile-pic">
-        <img src="asset/img/profile.jpg" alt="Sharif Ahsan" />
+        <img src="asset/img/profile.jpg" alt="Jobaer Hossain">
       </div>
       <h1>Jobaer Hossain</h1>
       <p>Technical Support Specialist & Technical Trainer</p>
 
       <div class="social-icons">
-        <a href="https://www.facebook.com/jbhs.info" target="_blank"
-          ><i class="fab fa-facebook-f"></i
-        ></a>
-        <!-- <a href="https://x.com/hsjobaerlis" target="_blank"><i class="fab fa-twitter"></i></a> -->
-        <a href="https://www.linkedin.com/in/hsjb/" target="_blank"
-          ><i class="fab fa-linkedin-in"></i
-        ></a>
-        <!-- <a href="https://www.instagram.com/jbhs.info/" target="_blank"><i class="fab fa-instagram"></i></a> -->
-        <!-- <a href="https://wa.me/01575267698" target="_blank"><i class="fab fa-whatsapp"></i></a> -->
-        <a href="https://t.me/hsjb_info" target="_blank"
-          ><i class="fab fa-telegram"></i
-        ></a>
-        <a href="https://discordapp.com/users/hsjobaerlisedu" target="_blank"
-          ><i class="fab fa-discord"></i
-        ></a>
+        <a href="https://www.facebook.com/jbhs.info" target="_blank"><i class="fab fa-facebook-f"></i></a>
+        <a href="https://www.linkedin.com/in/hsjb/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+        <a href="https://t.me/hsjb_info" target="_blank"><i class="fab fa-telegram"></i></a>
+        <a href="https://discordapp.com/users/hsjobaerlisedu" target="_blank"><i class="fab fa-discord"></i></a>
       </div>
 
       <div class="buttons">
-        <a href="https://flowcv.com/resume/phafog0rh9" download class="btn"
-          ><i class="fas fa-download"></i> Resume
-        </a>
-        <a href="contact.html" class="btn" target="_blank"
-          ><i class="fab fa-whatsapp"></i> Contact Me</a
-        >
-        <!-- <a href="#" class="btn intro"><i class="fas fa-play"></i> Intro</a> -->
+        <a href="https://flowcv.com/resume/phafog0rh9" target="_blank" class="btn"><i class="fas fa-download"></i> Resume</a>
+        <a href="contact.html" class="btn" target="_blank"><i class="fab fa-whatsapp"></i> Contact Me</a>
       </div>
-
-      <!-- Resume Download Button -->
 
       <!-- Next Page Button -->
       <div class="next-page-button">
-        <a href="resume.html" class="btn next-btn"
-          ><i class="fas fa-arrow-down"></i>
-        </a>
+        <a href="resume.html" class="btn next-btn"><i class="fas fa-arrow-down"></i></a>
       </div>
     </div>
   </body>
