changing title in index.html

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <img src="asset/img/profile.jpg" alt="Jobaer Hossain">
       </div>
       <h1>Jobaer Hossain</h1>
-      <p>Technical Support Specialist & Technical Trainer</p>
+      <p>Technical Support Specialist & Technical Instructor</p>
 
       <div class="social-icons">
         <a href="https://www.facebook.com/jbhs.info" target="_blank"><i class="fab fa-facebook-f"></i></a>
