make some change to animation and styles

--- a/index.html
+++ b/index.html
@@ -28,13 +28,14 @@
       <div class="social-icons">
         <a href="https://www.facebook.com/jbhs.info" target="_blank"><i class="fab fa-facebook-f"></i></a>
         <a href="https://www.linkedin.com/in/hsjb/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+        <a href="https://wa.me/8801575267698" target="_blank"><i class="fab fa-whatsapp"></i></a>
         <a href="https://t.me/hsjb_info" target="_blank"><i class="fab fa-telegram"></i></a>
         <a href="https://discordapp.com/users/hsjobaerlisedu" target="_blank"><i class="fab fa-discord"></i></a>
       </div>
 
       <div class="buttons">
         <a href="https://flowcv.com/resume/phafog0rh9" target="_blank" class="btn"><i class="fas fa-download"></i> Resume</a>
-        <a href="https://wa.me/8801575267698" class="btn" target="_blank"><i class="fab fa-whatsapp"></i> Contact Me</a>
+        <a href="mailto:info@hsjb.info" class="btn"><i class="fas fa-envelope"></i> Contact Me</a>
       </div>
 
       <!-- Next Page Button -->
