update resume page

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <link rel="icon" href="asset/img/favicon.png" type="image/png" />
 
     <!-- Link to CSS -->
-    <link rel="stylesheet" href="css/style.css"/>
+    <link rel="stylesheet" href="assets/css/style.css"/>
 
     <!-- Font Awesome Icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
@@ -70,7 +70,7 @@
   <body>
     <div class="container">
       <div class="profile-pic">
-        <img src="asset/img/profile.jpg" alt="Jobaer Hossain">
+        <img src="assets/img/profile.jpg" alt="Jobaer Hossain">
       </div>
       <h1>Jobaer Hossain</h1>
       <p>Technical Enablement Specialist</p>
