--- a/resume.html
+++ b/resume.html
@@ -283,13 +283,13 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
-              <h4>Bachelor in Library and Information Science</h4>
+              <h4>Bachelor of Arts (Hon's)</h4>
               <h5>July 2019 - Jun 2023</h5>
               <p><em>National University, Dhaka</em></p>
             </div>
 
             <div class="resume-item">
-              <h4>Higer Secondary Certificate, Business Studies</h4>
+              <h4>Higher Secondary Certificate</h4>
               <h5>2017 - 2019</h5>
               <p><em>National Ideal College, Dhaka</em></p>
             </div>
@@ -315,7 +315,7 @@
             <h3 class="resume-title">Professional Experience</h3>
 
             <div class="resume-item">
-              <h4>Subject Matter Expert, Network & System</h4>
+              <h4>Subject Matter Expert, Networking</h4>
               <h5>May 2025 – Present</h5>
               <p><em>InComIT Training Academy, Dhaka</em></p>
             </div>
