--- a/resume.html
+++ b/resume.html
@@ -116,7 +116,10 @@
           <div class="col-lg-8 content">
             <h2>Technical Enablement specialist.</h2>
             <p class="fst-italic py-3">
-              Looking for a challenging and rewarding career path that offers the opportunity for growth and development and the gradual assumption of greater responsibility using knowledge, perception & innovation, and where I will be able to apply all skills that I have learned to achieve the mission and vision of the organization.
+              Motivated and technically adept IT professional with a strong academic foundation and hands-on experience in networking, system administration, and IT support. With a Bachelor's degree in Arts and industry-recognized certifications such as CCNA: Routing & Switching and CompTIA A+, I bring a balanced blend of theoretical knowledge and practical skills. My career spans over several years, during which I have held diverse roles including Support Engineer, System & Network Administrator, IT Instructor, and Chief Executive Officer.
+            </p>
+            <p class="fst-italic py-3">
+              I specialize in managing and maintaining both Windows and Linux server environments, virtualization platforms, and enterprise-grade network infrastructure. I possess a solid command over network configuration, security implementation, and troubleshooting complex IT issues. As a Subject Matter Expert in Networking and a Senior Network Engineer, I am actively involved in training, mentoring, and leading technical teams to achieve organizational goals. My leadership has played a key role in establishing training frameworks and technical roadmaps in the institutions I’ve worked with.
             </p>
             <div class="row">
               <div class="col-lg-6">
