education info update

--- a/resume.html
+++ b/resume.html
@@ -293,7 +293,7 @@
 
             <div class="resume-item">
               <h4>Higher Secondary Certificate</h4>
-              <h5>2017 - 2019</h5>
+              <h5>July 2017 - June 2019</h5>
               <p><em>National Ideal College, Dhaka</em></p>
             </div>
 
