--- a/resume.html
+++ b/resume.html
@@ -124,14 +124,14 @@
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>Aug 30, 2025</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>Aug 30, 2000</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+880 1575-267698</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>info@hsjb.info</span></li>
                 </ul>
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Bachelor</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Bachelor of Arts (Hon's)</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Dhaka, Bangladesh</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.hsjb.info</span></li>
                 </ul>
@@ -154,6 +154,20 @@
       <div class="container" data-aos="fade-up" data-aos-delay="100">
         <div class="row skills-content skills-animation">
           <div class="col-lg-6">
+            <div class="progress">
+              <span class="skill"><span>Spreadsheet (Excel & Sheets)</span> <i class="val">90%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div><!-- End Skills Item -->
+
+            <div class="progress">
+              <span class="skill"><span>Visualization (Power BI & Tableau)</span> <i class="val">70%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div><!-- End Skills Item -->
+
             <div class="progress">
               <span class="skill"><span>Hardware & Software</span> <i class="val">85%</i></span>
               <div class="progress-bar-wrap">
@@ -212,6 +226,20 @@
           </div>
 
           <div class="col-lg-6">
+            <div class="progress">
+              <span class="skill"><span>Database (MySQL & PostgreSQL)</span> <i class="val">75%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div><!-- End Skills Item -->
+
+            <div class="progress">
+              <span class="skill"><span>Data Analysis</span> <i class="val">60%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div><!-- End Skills Item -->
+
             <div class="progress">
               <span class="skill"><span>Networking</span> <i class="val">90%</i></span>
               <div class="progress-bar-wrap">
@@ -298,7 +326,7 @@
             </div>
 
             <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
-              <h3 class="resume-title">Courses & Certificates</h3>
+              <h3 class="resume-title">Professional Training</h3>
   
               <div class="resume-item">
                 <h4>CCNA: Routing & Switching</h4>
@@ -310,6 +338,22 @@
                 <h4>CompTIA A+</h4>
                 <h5>May 2023 - October 2023</h5>
                 <p><em>One Sky Information Technology, Dhaka</em></p>
+              </div>
+            </div>
+
+            <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
+              <h3 class="resume-title">Training Project</h3>
+  
+              <div class="resume-item">
+                <h4>Polytechnic Industrial Attachment 2024</h4>
+                <h5>June 2024 - October 2024</h5>
+                <p><em>One Sky Information Technology, Dhaka</em></p>
+              </div>
+  
+              <div class="resume-item">
+                <h4>Hardware and Network Operations Training</h4>
+                <h5>February 2024 - June 2024</h5>
+                <p><em>IT Training School, Police Telecom Organization, Dhaka</em></p>
               </div>
             </div>
           </div>
@@ -343,8 +387,14 @@
 
             <div class="resume-item">
               <h4>Principle Technical Trainer</h4>
-              <h5>August 2023 – September 2024</h5>
+              <h5>August 2023 – October 2024</h5>
               <p><em>One Sky Information Technology, Dhaka</em></p>
+            </div>
+
+            <div class="resume-item">
+              <h4>Technical Instructor</h4>
+              <h5>February 2024 - June 2024</h5>
+              <p><em>IBCS-PRIMAX Software (Bangladesh) Limited, Dhaka</em></p>
             </div>
 
             <div class="resume-item">
