--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         <div class="row justify-content-center">
           <div class="col-lg-9">
             <h2>Jobaer Hossain</h2>
-            <p>I'm <span class="typed" data-typed-items="Network Specialist, Server Specialist, Cloud Specialist">IT Enablement Specialist</span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
+            <p>I'm <span class="typed" data-typed-items="IT Enablement Specialist, Network Specialist, Server Specialist, Cloud Specialist"></span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
             <div class="social-links">
               <a href="https://www.facebook.com/jbhs.info/" target="_blank"><i class="bi bi-facebook"></i></a>
               <a href="https://www.linkedin.com/in/hsjb/" target="_blank"><i class="bi bi-linkedin"></i></a>
