--- a/index.html
+++ b/index.html
@@ -590,6 +590,23 @@
 
     </section><!-- /Services Section -->
 
+    <!-- Call To Action Section -->
+    <section id="call-to-action" class="call-to-action section accent-background">
+
+      <div class="container">
+        <div class="row justify-content-center" data-aos="zoom-in" data-aos-delay="100">
+          <div class="col-xl-10">
+            <div class="text-center">
+              <h3>Call To Action</h3>
+              <p>"Ready to take the next step? Our team is here to provide tailored solutions that drive your business forward."</p>
+              <a class="cta-btn" href="tel:+8801633914046">Call To Action</a>
+            </div>
+          </div>
+        </div>
+      </div>
+
+    </section><!-- /Call To Action Section -->
+
   </main>
 
   <footer id="footer" class="footer position-relative light-background">
