update footer section

--- a/index.html
+++ b/index.html
@@ -590,30 +590,22 @@
 
     </section><!-- /Services Section -->
 
-    <!-- Call To Action Section -->
-    <section id="call-to-action" class="call-to-action section accent-background">
-
-      <div class="container">
-        <div class="row justify-content-center" data-aos="zoom-in" data-aos-delay="100">
-          <div class="col-xl-10">
-            <div class="text-center">
-              <h3>Call To Action</h3>
-              <p>"Ready to take the next step? Our team is here to provide tailored solutions that drive your business forward."</p>
-              <a class="cta-btn" href="tel:+8801633914046">Call To Action</a>
-            </div>
-          </div>
-        </div>
-      </div>
-
-    </section><!-- /Call To Action Section -->
-
   </main>
 
   <footer id="footer" class="footer position-relative light-background">
     <div class="container">
+      <h3 class="sitename">Jobaer Hossain</h3>
+      <p>"Driven by passion, powered by knowledge - bridging theory and practice in every IT solution."</p>
+      <div class="social-links d-flex justify-content-center">
+        <a href="https://www.facebook.com/jbhs.info/" target="_blank"><i class="bi bi-facebook"></i></a>
+        <a href="https://www.linkedin.com/in/hsjb/" target="_blank"><i class="bi bi-linkedin"></i></a>
+        <a href="https://wa.me/8801575267698/" target="_blank"><i class="bi bi-whatsapp"></i></a>
+        <a href="https://t.me/hsjb_info/" target="_blank"><i class="bi bi-telegram"></i></a>
+        <a href="https://discordapp.com/users/hsjobaerlisedu/" target="_blank"><i class="bi bi-discord"></i></a>
+      </div>
       <div class="container">
         <div class="copyright">
-          <span>© Copyright</span> <strong class="px-1 sitename">Jobaer Hossain</strong> <span>All Rights Reserved</span>
+          <span>&copy; Copyright</span> <strong class="px-1 sitename">Jobaer Hossain</strong> <span>All Rights Reserved</span>
         </div>
       </div>
     </div>
