--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
         <li><a href="#skills"><i class="bi bi-hammer navicon"></i><span>Skills</span></a></li>
         <li><a href="#resume"><i class="bi bi-file-earmark-text navicon"></i><span>Resume</span></a></li>
         <li><a href="#services"><i class="bi bi-hdd-stack navicon"></i><span>Services</span></a></li>
+        <li><a href="#testimonials"><i class="bi bi-chat-square-text navicon"></i><span>Testimonials</span></a></li>
       </ul>
     </nav>
 
