profile-img changed

--- a/index.html
+++ b/index.html
@@ -125,12 +125,12 @@
 
         <div class="row gy-4 justify-content-center">
           <div class="col-lg-4">
-            <img src="assets/img/profile-img.jpg" class="img-fluid" alt="">
+            <img src="assets/img/profile-img.png" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 content">
             <h2>IT Enablement Specialist.</h2>
             <p class="fst-italic py-3">
-              Motivated and technically adept IT professional with a strong academic foundation and hands-on experience in networking, system administration, and IT support. With a Bachelor's degree in Arts and industry-recognized certifications such as CCNA: Routing & Switching and CompTIA A+, I bring a balanced blend of theoretical knowledge and practical skills. My career spans over several years, during which I have held diverse roles including Support Engineer, System & Network Administrator, IT Instructor, and Chief Executive Officer.
+              Motivated and technically skilled IT professional with hands-on experience in networking, system administration, and IT support. I bring a strong blend of theoretical knowledge and practical expertise, having held roles such as Support Engineer, System & Network Administrator, IT Instructor, and CEO over the course of my career.
             </p>
             <div class="row">
               <div class="col-lg-6">
@@ -149,7 +149,7 @@
               </div>
             </div>
             <p class="py-3">
-              I specialize in managing and maintaining both Windows and Linux server environments, virtualization platforms, and enterprise-grade network infrastructure. I possess a solid command over network configuration, security implementation, and troubleshooting complex IT issues. As a Subject Matter Expert in Networking and a Senior Network Engineer, I am actively involved in training, mentoring, and leading technical teams to achieve organizational goals. My leadership has played a key role in establishing training frameworks and technical roadmaps in the institutions I’ve worked with.
+              I specialize in managing and maintaining Windows and Linux server environments, virtualization platforms, and enterprise network infrastructure. With strong expertise in network configuration, security, and troubleshooting, I also serve as a Subject Matter Expert and Senior Network Engineer. I actively lead, mentor, and train technical teams, playing a key role in developing training frameworks and technical roadmaps for organizational success.
             </p>
           </div>
         </div>
