linkedin link updated

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             <p>I'm <span class="typed" data-typed-items="IT Enablement Specialist, Network Specialist, Server Specialist, Cloud Specialist"></span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
             <div class="social-links">
               <a href="https://www.facebook.com/jbhs.info/" target="_blank"><i class="bi bi-facebook"></i></a>
-              <a href="https://www.linkedin.com/in/hsjb/" target="_blank"><i class="bi bi-linkedin"></i></a>
+              <a href="https://www.linkedin.com/in/hsjobaerlisedu/" target="_blank"><i class="bi bi-linkedin"></i></a>
               <a href="https://wa.me/8801575267698/" target="_blank"><i class="bi bi-whatsapp"></i></a>
               <a href="https://t.me/hsjb_info/" target="_blank"><i class="bi bi-telegram"></i></a>
               <a href="https://discordapp.com/users/hsjobaerlisedu/" target="_blank"><i class="bi bi-discord"></i></a>
@@ -423,25 +423,6 @@
                   <h5>May 2023 - October 2023</h5>
                   <p><em>One Sky Information Technology, Dhaka</em></p>
                 </div><!-- Edn Resume Item -->
-
-              </div>
-
-              <div data-aos="fade-up" data-aos-delay="100">
-
-                <h3 class="resume-title">Training Projects</h3>
-
-                <div class="resume-item">
-                  <h4>Polytechnic Industrial Attachment 2024</h4>
-                  <h5>June 2024 - October 2024</h5>
-                  <p><em>One Sky Information Technology, Dhaka</em></p>
-                </div><!-- Edn Resume Item -->
-
-                <div class="resume-item">
-                  <h4>Hardware and Network Operations Training</h4>
-                  <h5>May 2023 - October 2023</h5>
-                  <p><em>IT Training School, Police Telecom Organization, Bangladesh Police</em></p>
-                </div><!-- Edn Resume Item -->
-
               </div>
 
           </div>
@@ -451,9 +432,9 @@
             <h3 class="resume-title">Professional Experience</h3>
 
             <div class="resume-item">
-              <h4>Subject Matter Expert, Network & System</h4>
+              <h4>Head of the Department, Training</h4>
               <h5>May 2025 - Present</h5>
-              <p><em>InComIT Training Academy, Dhaka/em></p>
+              <p><em>InComIT Training Academy, Dhaka</em></p>
             </div><!-- Edn Resume Item -->
 
             <div class="resume-item">
@@ -463,15 +444,9 @@
             </div><!-- Edn Resume Item -->
 
             <div class="resume-item">
-              <h4>Chief Training Officer</h4>
-              <h5>July 2024 - Present</h5>
-              <p><em>Intrex Digital Solution Hub, Dhaka/em></p>
-            </div><!-- Edn Resume Item -->
-
-            <div class="resume-item">
               <h4>Chief Executive Officer</h4>
               <h5>July 2024 - Present</h5>
-              <p><em>Intrex Digital Solution Hub, Dhaka/em></p>
+              <p><em>Intrex Digital Hub, Dhaka</em></p>
             </div><!-- Edn Resume Item -->
 
             <div class="resume-item">
@@ -598,7 +573,7 @@
       <p>"Driven by passion, powered by knowledge - bridging theory and practice in every IT solution."</p>
       <div class="social-links d-flex justify-content-center">
         <a href="https://www.facebook.com/jbhs.info/" target="_blank"><i class="bi bi-facebook"></i></a>
-        <a href="https://www.linkedin.com/in/hsjb/" target="_blank"><i class="bi bi-linkedin"></i></a>
+        <a href="https://www.linkedin.com/in/hsjobaerlisedu/" target="_blank"><i class="bi bi-linkedin"></i></a>
         <a href="https://wa.me/8801575267698/" target="_blank"><i class="bi bi-whatsapp"></i></a>
         <a href="https://t.me/hsjb_info/" target="_blank"><i class="bi bi-telegram"></i></a>
         <a href="https://discordapp.com/users/hsjobaerlisedu/" target="_blank"><i class="bi bi-discord"></i></a>
