--- a/index.html
+++ b/index.html
@@ -470,7 +470,7 @@
     </section><!-- /Resume Section -->
 
     <!-- Services Section -->
-    <section id="services" class="services section">
+    <section id="services" class="services section light-background">
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
