data changed in resume

--- a/index.html
+++ b/index.html
@@ -413,6 +413,12 @@
                 <h3 class="resume-title">Professional Training</h3>
 
                 <div class="resume-item">
+                  <h4>IT Support Professional</h4>
+                  <h5>Nov 2023 - Feb 2024</h5>
+                  <p><em>Grow with Google, Dhaka</em></p>
+                </div><!-- Edn Resume Item -->
+
+                <div class="resume-item">
                   <h4>CCNA: Routing & Switchingt</h4>
                   <h5>May 2023 - October 2023t</h5>
                   <p><em>One Sky Information Technology, Dhaka</em></p>
@@ -450,9 +456,15 @@
             </div><!-- Edn Resume Item -->
 
             <div class="resume-item">
+              <h4>Technical Instructor (Contracted)</h4>
+              <h5>August 2023 - September 2024</h5>
+              <p><em>IBCS Primax Software Bangladesh, Dhaka</em></p>
+            </div><!-- Edn Resume Item -->
+
+            <div class="resume-item">
               <h4>Principle Technical Trainer</h4>
               <h5>August 2023 - September 2024</h5>
-              <p><em>One Sky Information Technology</em></p>
+              <p><em>One Sky Information Technology, Dhaka</em></p>
             </div><!-- Edn Resume Item -->
 
             <div class="resume-item">
