--- a/index.html
+++ b/index.html
@@ -413,6 +413,12 @@
                 <h3 class="resume-title">Professional Training</h3>
 
                 <div class="resume-item">
+                  <h4>Koha Library Software for Smart Librarians</h4>
+                  <h5>Mar 2024 - Mar 2024</h5>
+                  <p><em>Sothik IT, Dhaka</em></p>
+                </div><!-- Edn Resume Item -->
+
+                <div class="resume-item">
                   <h4>IT Support Professional</h4>
                   <h5>Nov 2023 - Feb 2024</h5>
                   <p><em>Grow with Google, Dhaka</em></p>
