--- a/index.html
+++ b/index.html
@@ -375,117 +375,158 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Resume</h2>
-      </div><!-- End Section Title -->
+      </div>
+      <!-- End Section Title -->
 
       <div class="container">
-
         <div class="row">
 
+          <!-- Left Column -->
           <div class="col-lg-6">
 
-              <div data-aos="fade-up" data-aos-delay="100">
-                
-                <h3 class="resume-title">Education</h3>
-                
-                <div class="resume-item">
-                  <h4>Bachelor of Arts (Hon's)</h4>
-                  <h5>July 2019 - June 2023</h5>
-                  <p><em>National University of Bangladesh, Dhaka</em></p>
-                </div><!-- Edn Resume Item -->
+            <!-- Education -->
+            <div data-aos="fade-up" data-aos-delay="100">
+              <h3 class="resume-title">Education</h3>
 
-                <div class="resume-item">
-                  <h4>Higher Secondary Certificate</h4>
-                  <h5>July 2017 - June 2019</h5>
-                  <p><em>National Ideal College, Dhaka</em></p>
-                </div><!-- Edn Resume Item -->
-
-                <div class="resume-item">
-                  <h4>Secondary School certificate</h4>
-                  <h5>January 2015 - February 2017</h5>
-                  <p><em>National School and College, Dhaka</em></p>
-                </div><!-- Edn Resume Item -->            
-
+              <div class="resume-item">
+                <h4>Bachelor of Arts (Hon's)</h4>
+                <h5>July 2019 - June 2023</h5>
+                <p><em>National University of Bangladesh, Dhaka</em></p>
               </div>
 
-
-              <div data-aos="fade-up" data-aos-delay="100">
-
-                <h3 class="resume-title">Professional Training</h3>
-
-                <div class="resume-item">
-                  <h4>Koha Library Software for Smart Librarians</h4>
-                  <h5>Mar 2024 - Mar 2024</h5>
-                  <p><em>Sothik IT, Dhaka</em></p>
-                </div><!-- Edn Resume Item -->
-
-                <div class="resume-item">
-                  <h4>IT Support Professional</h4>
-                  <h5>Nov 2023 - Feb 2024</h5>
-                  <p><em>Grow with Google, Dhaka</em></p>
-                </div><!-- Edn Resume Item -->
-
-                <div class="resume-item">
-                  <h4>CCNA: Routing & Switchingt</h4>
-                  <h5>May 2023 - October 2023t</h5>
-                  <p><em>One Sky Information Technology, Dhaka</em></p>
-                </div><!-- Edn Resume Item -->
-
-                <div class="resume-item">
-                  <h4>CompTIA A+</h4>
-                  <h5>May 2023 - October 2023</h5>
-                  <p><em>One Sky Information Technology, Dhaka</em></p>
-                </div><!-- Edn Resume Item -->
+              <div class="resume-item">
+                <h4>Higher Secondary Certificate</h4>
+                <h5>July 2017 - June 2019</h5>
+                <p><em>National Ideal College, Dhaka</em></p>
               </div>
+
+              <div class="resume-item">
+                <h4>Secondary School Certificate</h4>
+                <h5>January 2015 - February 2017</h5>
+                <p><em>National School and College, Dhaka</em></p>
+              </div>
+            </div>
+            <!-- End Education -->
+
+            <!-- Professional Training -->
+            <div data-aos="fade-up" data-aos-delay="100">
+              <h3 class="resume-title">Professional Training</h3>
+
+              <div class="resume-item">
+                <h4>Koha Library Software for Smart Librarians</h4>
+                <h5>Mar 2024</h5>
+                <p><em>Sothik IT, Dhaka</em></p>
+              </div>
+
+              <div class="resume-item">
+                <h4>Introduction to the Threat Landscape</h4>
+                <h5>June 2024 - July 2024</h5>
+                <p><em>Fortinet, Inc.</em></p>
+              </div>
+
+              <div class="resume-item">
+                <h4>IT Automation with Python</h4>
+                <h5>Jan 2024 - Mar 2024</h5>
+                <p><em>Grow with Google</em></p>
+              </div>
+
+              <div class="resume-item">
+                <h4>IT Support Professional</h4>
+                <h5>Nov 2023 - Feb 2024</h5>
+                <p><em>Grow with Google</em></p>
+              </div>
+
+              <div class="resume-item">
+                <h4>CCNA: Routing & Switching</h4>
+                <h5>May 2023 - Oct 2023</h5>
+                <p><em>One Sky Information Technology, Dhaka</em></p>
+              </div>
+
+              <div class="resume-item">
+                <h4>CompTIA A+</h4>
+                <h5>May 2023 - Oct 2023</h5>
+                <p><em>One Sky Information Technology, Dhaka</em></p>
+              </div>
+            </div>
+            <!-- End Professional Training -->
 
           </div>
+          <!-- End Left Column -->
 
+          <!-- Right Column -->
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
 
+            <!-- Professional Experience -->
             <h3 class="resume-title">Professional Experience</h3>
 
             <div class="resume-item">
               <h4>Head of the Department, Training</h4>
               <h5>May 2025 - Present</h5>
               <p><em>InComIT Training Academy, Dhaka</em></p>
-            </div><!-- Edn Resume Item -->
+            </div>
 
             <div class="resume-item">
               <h4>Senior Network Engineer</h4>
-              <h5>April 2025 - Present</h5>
+              <h5>Apr 2025 - Present</h5>
               <p><em>InComIT Solution, Dhaka</em></p>
-            </div><!-- Edn Resume Item -->
+            </div>
 
             <div class="resume-item">
               <h4>Chief Executive Officer</h4>
-              <h5>July 2024 - Present</h5>
+              <h5>Jul 2024 - Present</h5>
               <p><em>Intrex Digital Hub, Dhaka</em></p>
-            </div><!-- Edn Resume Item -->
+            </div>
 
             <div class="resume-item">
               <h4>Technical Instructor (Contracted)</h4>
-              <h5>August 2023 - September 2024</h5>
+              <h5>Aug 2023 - Sep 2024</h5>
               <p><em>IBCS Primax Software Bangladesh, Dhaka</em></p>
-            </div><!-- Edn Resume Item -->
+            </div>
 
             <div class="resume-item">
-              <h4>Principle Technical Trainer</h4>
-              <h5>August 2023 - September 2024</h5>
+              <h4>Principal Technical Trainer</h4>
+              <h5>Aug 2023 - Sep 2024</h5>
               <p><em>One Sky Information Technology, Dhaka</em></p>
-            </div><!-- Edn Resume Item -->
+            </div>
 
             <div class="resume-item">
               <h4>Support Engineer</h4>
-              <h5>June 2023 - April 2024</h5>
+              <h5>Jun 2023 - Apr 2024</h5>
               <p><em>One Sky Communications Limited, Dhaka</em></p>
-            </div><!-- Edn Resume Item -->
+            </div>
+
+            <!-- Industrial Training Projects -->
+            <div data-aos="fade-up" data-aos-delay="100">
+              <h3 class="resume-title">Industrial Training Projects</h3>
+
+              <div class="resume-item">
+                <h4>Polytechnic Industrial Attachment 2024</h4>
+                <h5>Jun 2024 - Oct 2024</h5>
+                <p><em>One Sky Information Technology, Dhaka</em></p>
+              </div>
+
+              <div class="resume-item">
+                <h4>Basic ICT Training</h4>
+                <h5>Apr 2025 - May 2025</h5>
+                <p><em>IT Training School, Police Telecom Organization, Dhaka</em></p>
+              </div>
+
+              <div class="resume-item">
+                <h4>Hardware and Network Operations Training</h4>
+                <h5>Feb 2024 - Jun 2024</h5>
+                <p><em>IT Training School, Police Telecom Organization, Dhaka</em></p>
+              </div>
+            </div>
+            <!-- End Industrial Training Projects -->
 
           </div>
+          <!-- End Right Column -->
 
         </div>
-
       </div>
 
-    </section><!-- /Resume Section -->
+    </section>
+    <!-- /Resume Section -->
 
     <!-- Services Section -->
     <section id="services" class="services section light-background">
