--- a/index.html
+++ b/index.html
@@ -410,42 +410,48 @@ Development</span> <i class="val">85%</i></span>
             <!-- End Education -->
 
             <!-- Professional Training -->
-            <div data-aos="fade-up" data-aos-delay="100">
+            <div data-aos="fade-up" data-aos-delay="200">
               <h3 class="resume-title">Professional Training</h3>
 
               <div class="resume-item">
+                <h4>Diploma in Computer Networking</h4>
+                <h5>Completion Date: August 2025</h5>
+                <p><em>Alison, Inc.</em></p>
+              </div>
+
+              <div class="resume-item">
+                <h4>Diploma in Information Technology Management</h4>
+                <h5>Completion Date: August 2025</h5>
+                <p><em>Alison, Inc.</em></p>
+              </div>
+
+              <div class="resume-item">
+                <h4>Diploma in Information Technology Support</h4>
+                <h5>Completion Date: August 20254</h5>
+                <p><em>Alison, Inc.</em></p>
+              </div>
+
+              <div class="resume-item">
                 <h4>Koha Library Software for Smart Librarians</h4>
-                <h5>Mar 2024</h5>
-                <p><em>Sothik IT, Dhaka</em></p>
-              </div>
-
-              <div class="resume-item">
-                <h4>Introduction to the Threat Landscape</h4>
-                <h5>June 2024 - July 2024</h5>
-                <p><em>Fortinet, Inc.</em></p>
-              </div>
-
-              <div class="resume-item">
-                <h4>IT Automation with Python</h4>
-                <h5>Jan 2024 - Mar 2024</h5>
-                <p><em>Grow with Google</em></p>
+                <h5>Completion Date: March 2024</h5>
+                <p><em>Sothik IT & Digital Solutions Bangladesh</em></p>
               </div>
 
               <div class="resume-item">
                 <h4>IT Support Professional</h4>
-                <h5>Nov 2023 - Feb 2024</h5>
+                <h5>Completion Date: February 2024</h5>
                 <p><em>Grow with Google</em></p>
               </div>
 
               <div class="resume-item">
                 <h4>CCNA: Routing & Switching</h4>
-                <h5>May 2023 - Oct 2023</h5>
+                <h5>Completion Date: October 2023</h5>
                 <p><em>One Sky Information Technology, Dhaka</em></p>
               </div>
 
               <div class="resume-item">
                 <h4>CompTIA A+</h4>
-                <h5>May 2023 - Oct 2023</h5>
+                <h5>Completion Date: October 2023</h5>
                 <p><em>One Sky Information Technology, Dhaka</em></p>
               </div>
             </div>
@@ -455,66 +461,75 @@ Development</span> <i class="val">85%</i></span>
           <!-- End Left Column -->
 
           <!-- Right Column -->
-          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
+          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="300">
 
             <!-- Professional Experience -->
-            <h3 class="resume-title">Professional Experience</h3>
-
-            <div class="resume-item">
-              <h4>Head of the Department, Training</h4>
-              <h5>May 2025 - Present</h5>
-              <p><em>InComIT Training Academy, Dhaka</em></p>
-            </div>
-
-            <div class="resume-item">
-              <h4>Senior Network Engineer</h4>
-              <h5>Apr 2025 - Present</h5>
-              <p><em>InComIT Solution, Dhaka</em></p>
-            </div>
-
-            <div class="resume-item">
-              <h4>Chief Executive Officer</h4>
-              <h5>Jul 2024 - Present</h5>
-              <p><em>Intrex Digital Hub, Dhaka</em></p>
-            </div>
-
-            <div class="resume-item">
-              <h4>Technical Instructor (Contracted)</h4>
-              <h5>Aug 2023 - Sep 2024</h5>
-              <p><em>IBCS Primax Software Bangladesh, Dhaka</em></p>
-            </div>
-
-            <div class="resume-item">
-              <h4>Principal Technical Trainer</h4>
-              <h5>Aug 2023 - Sep 2024</h5>
-              <p><em>One Sky Information Technology, Dhaka</em></p>
-            </div>
-
-            <div class="resume-item">
-              <h4>Support Engineer</h4>
-              <h5>Jun 2023 - Apr 2024</h5>
-              <p><em>One Sky Communications Limited, Dhaka</em></p>
-            </div>
-
-            <!-- Industrial Training Projects -->
-            <div data-aos="fade-up" data-aos-delay="100">
-              <h3 class="resume-title">Industrial Training Projects</h3>
+             <div data-aos="fade-up" data-aos-delay="200">
+              <h3 class="resume-title">Professional Experience</h3>
 
               <div class="resume-item">
-                <h4>Polytechnic Industrial Attachment 2024</h4>
-                <h5>Jun 2024 - Oct 2024</h5>
+                <h4>Subject Matter Expert, Network & Systems</h4>
+                <h5>May 2025 - Present</h5>
+                <p><em>InComIT Training Academy, Dhaka</em></p>
+              </div>
+
+              <div class="resume-item">
+                <h4>Network Engineer</h4>
+                <h5>April 2025 - Present</h5>
+                <p><em>InComIT Solution, Dhaka</em></p>
+              </div>
+
+              <div class="resume-item">
+                <h4>Subject Matter Expert, Networking</h4>
+                <h5>July 2024 - Present</h5>
+                <p><em>Intrex Digital Learning Hub, Dhaka</em></p>
+              </div>
+
+              <div class="resume-item">
+                <h4>Technical Instructor (Contracted)</h4>
+                <h5>August 2023 - September 2024</h5>
+                <p><em>IBCS Primax Software Bangladesh, Dhaka</em></p>
+              </div>
+
+              <div class="resume-item">
+                <h4>Principal Technical Trainer</h4>
+                <h5>August 2023 - September 2024</h5>
                 <p><em>One Sky Information Technology, Dhaka</em></p>
               </div>
 
               <div class="resume-item">
-                <h4>Basic ICT Training</h4>
-                <h5>Apr 2025 - May 2025</h5>
+                <h4>Support Engineer</h4>
+                <h5>June 2023 - April 2024</h5>
+                <p><em>One Sky Communications Limited, Dhaka</em></p>
+              </div>
+            </div>
+            <!-- End Professional Experience -->
+
+            <!-- Industrial Training Projects -->
+            <div data-aos="fade-up" data-aos-delay="400">
+              <h3 class="resume-title">Industrial Training Projects</h3>
+
+              <div class="resume-item">
+                <h4>Polytechnic Industrial Attachment 2024</h4>
+                <h5>June 2024 - October 2024</h5>
+                <p><em>One Sky Information Technology, Dhaka</em></p>
+              </div>
+
+              <div class="resume-item">
+                <h4>Training on ICT Essentials</h4>
+                <h5>April 2025 - May 2025</h5>
+                <p><em>IT Training School, Police Telecom Organization, Dhaka</em></p>
+              </div>
+
+              <div class="resume-item">
+                <h4>Training on Microsoft Excel</h4>
+                <h5>April 2025 - May 2025</h5>
                 <p><em>IT Training School, Police Telecom Organization, Dhaka</em></p>
               </div>
 
               <div class="resume-item">
                 <h4>Hardware and Network Operations Training</h4>
-                <h5>Feb 2024 - Jun 2024</h5>
+                <h5>February 2024 - June 2024</h5>
                 <p><em>IT Training School, Police Telecom Organization, Dhaka</em></p>
               </div>
             </div>
@@ -522,12 +537,12 @@ Development</span> <i class="val">85%</i></span>
 
           </div>
           <!-- End Right Column -->
-
+           
         </div>
       </div>
-
     </section>
     <!-- /Resume Section -->
+
 
     <!-- Services Section -->
     <section id="services" class="services section light-background">
