--- a/index.html
+++ b/index.html
@@ -480,7 +480,7 @@ Development</span> <i class="val">85%</i></span>
               </div>
 
               <div class="resume-item">
-                <h4>Principal Technical Trainer, Networking</h4>
+                <h4>Senior Subject Matter Expert, Networking</h4>
                 <h5>July 2024 - Present</h5>
                 <p><em>Intrex Digital Learning Hub, Dhaka</em></p>
               </div>
