--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
           <div class="col-lg-8 content">
             <h2>IT Enablement Specialist.</h2>
             <p class="py-3">
-              Motivated and technically skilled IT professional with hands-on experience in networking, system administration, and IT support. I bring a strong blend of theoretical knowledge and practical expertise, having held roles such as Support Engineer, System & Network Administrator, IT Instructor, and CEO over the course of my career.
+              Motivated and technically skilled IT professional with hands-on experience in networking, system administration, and IT support. I bring a strong blend of theoretical knowledge and practical expertise, having held roles such as Support Engineer, System & Network Engineer, and IT Instructor over the course of my career.
             </p>
             <div class="row">
               <div class="col-lg-6">
@@ -149,7 +149,7 @@
               </div>
             </div>
             <p class="py-3">
-              I specialize in managing and maintaining Windows and Linux server environments, virtualization platforms, and enterprise network infrastructure. With strong expertise in network configuration, security, and troubleshooting, I also serve as a Subject Matter Expert and Senior Network Engineer. I actively lead, mentor, and train technical teams, playing a key role in developing training frameworks and technical roadmaps for organizational success.
+              I specialize in managing and maintaining Windows and Linux server environments, virtualization platforms, and enterprise network infrastructure. With strong expertise in network configuration, security, and troubleshooting, I also serve as a Subject Matter Expert and Network Engineer. I actively lead, mentor, and train technical teams, playing a key role in developing training frameworks and technical roadmaps for organizational success.
             </p>
           </div>
         </div>
@@ -468,7 +468,7 @@ Development</span> <i class="val">85%</i></span>
               <h3 class="resume-title">Professional Experience</h3>
 
               <div class="resume-item">
-                <h4>Subject Matter Expert, Networking</h4>
+                <h4>Senior Instructor, Networking</h4>
                 <h5>May 2025 - Present</h5>
                 <p><em>InComIT Training Academy, Dhaka</em></p>
               </div>
@@ -480,7 +480,7 @@ Development</span> <i class="val">85%</i></span>
               </div>
 
               <div class="resume-item">
-                <h4>Senior Subject Matter Expert, Networking</h4>
+                <h4>Subject Matter Expert, Networking</h4>
                 <h5>July 2024 - Present</h5>
                 <p><em>Intrex Digital Learning Hub, Dhaka</em></p>
               </div>
