Contact Form Updated

--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
         <li><a href="#skills"><i class="bi bi-hammer navicon"></i><span>Skills</span></a></li>
         <li><a href="#resume"><i class="bi bi-file-earmark-text navicon"></i><span>Resume</span></a></li>
         <li><a href="#services"><i class="bi bi-hdd-stack navicon"></i><span>Services</span></a></li>
+        <li><a href="#contact"><i class="bi bi-envelope navicon"></i><span>Contact</span></a></li>
       </ul>
     </nav>
 
@@ -414,24 +415,6 @@ Development</span> <i class="val">85%</i></span>
               <h3 class="resume-title">Professional Training</h3>
 
               <div class="resume-item">
-                <h4>Diploma in Computer Networking</h4>
-                <h5>Completion Date: August 2025</h5>
-                <p><em>Alison, Inc.</em></p>
-              </div>
-
-              <div class="resume-item">
-                <h4>Diploma in Information Technology Management</h4>
-                <h5>Completion Date: August 2025</h5>
-                <p><em>Alison, Inc.</em></p>
-              </div>
-
-              <div class="resume-item">
-                <h4>Diploma in Information Technology Support</h4>
-                <h5>Completion Date: August 20254</h5>
-                <p><em>Alison, Inc.</em></p>
-              </div>
-
-              <div class="resume-item">
                 <h4>Koha Library Software for Smart Librarians</h4>
                 <h5>Completion Date: March 2024</h5>
                 <p><em>Sothik IT & Digital Solutions Bangladesh</em></p>
@@ -468,9 +451,9 @@ Development</span> <i class="val">85%</i></span>
               <h3 class="resume-title">Professional Experience</h3>
 
               <div class="resume-item">
-                <h4>Senior Instructor, Networking</h4>
-                <h5>May 2025 - Present</h5>
-                <p><em>InComIT Training Academy, Dhaka</em></p>
+                <h4>Technical Trainer (Contracted)</h4>
+                <h5>September 2025 - Present</h5>
+                <p><em>One Sky Information Technology, Dhaka</em></p>
               </div>
 
               <div class="resume-item">
@@ -482,7 +465,7 @@ Development</span> <i class="val">85%</i></span>
               <div class="resume-item">
                 <h4>Subject Matter Expert, Networking</h4>
                 <h5>July 2024 - Present</h5>
-                <p><em>Intrex Digital Learning Hub, Dhaka</em></p>
+                <p><em>Intrex Digital Hub, Dhaka</em></p>
               </div>
 
               <div class="resume-item">
@@ -492,7 +475,7 @@ Development</span> <i class="val">85%</i></span>
               </div>
 
               <div class="resume-item">
-                <h4>Principal Technical Trainer, Networking</h4>
+                <h4>Technical Trainer (Contracted)</h4>
                 <h5>August 2023 - September 2024</h5>
                 <p><em>One Sky Information Technology, Dhaka</em></p>
               </div>
@@ -510,25 +493,25 @@ Development</span> <i class="val">85%</i></span>
               <h3 class="resume-title">Industrial Training Projects</h3>
 
               <div class="resume-item">
+                <h4>Polytechnic Industrial Attachment 2025</h4>
+                <h5>September 2025 - Present</h5>
+                <p><em>One Sky Information Technology, Dhaka</em></p>
+              </div>
+
+              <div class="resume-item">
                 <h4>Polytechnic Industrial Attachment 2024</h4>
                 <h5>June 2024 - October 2024</h5>
                 <p><em>One Sky Information Technology, Dhaka</em></p>
               </div>
 
               <div class="resume-item">
-                <h4>Training on ICT Essentials</h4>
+                <h4>Training on Basic ICT (20th Batch)</h4>
                 <h5>April 2025 - May 2025</h5>
                 <p><em>IT Training School, Police Telecom Organization, Dhaka</em></p>
               </div>
 
               <div class="resume-item">
-                <h4>Training on Microsoft Excel</h4>
-                <h5>April 2025 - May 2025</h5>
-                <p><em>IT Training School, Police Telecom Organization, Dhaka</em></p>
-              </div>
-
-              <div class="resume-item">
-                <h4>Hardware and Network Operations Training</h4>
+                <h4>Training on Hardware and Network Operations</h4>
                 <h5>February 2024 - June 2024</h5>
                 <p><em>IT Training School, Police Telecom Organization, Dhaka</em></p>
               </div>
@@ -621,6 +604,106 @@ Development</span> <i class="val">85%</i></span>
       </div>
       
     </section><!-- /Services Section -->
+
+    <!-- Contact Section -->
+    <section id="contact" class="contact">
+
+      <!-- Section Title -->
+      <div class="container section-title" data-aos="fade-up">
+        <h2>Contact</h2>
+      </div><!-- End Section Title -->
+
+      <div class="container" data-aos="fade-up" data-aos-delay="100">
+
+        <div class="row g-4 g-lg-5">
+          <div class="col-lg-5">
+            <div class="info-box" data-aos="fade-up" data-aos-delay="200">
+              <h3>Contact Info</h3>
+
+              <div class="info-item" data-aos="fade-up" data-aos-delay="300">
+                <div class="icon-box">
+                  <i class="bi bi-geo-alt"></i>
+                </div>
+                <div class="content">
+                  <h4>Location</h4>
+                  <p>154 Motijheel Commercial Area,</p>
+                  <p>Motijheel, Dhaka 1000</p>
+                </div>
+              </div>
+
+              <div class="info-item" data-aos="fade-up" data-aos-delay="400">
+                <div class="icon-box">
+                  <i class="bi bi-telephone"></i>
+                </div>
+                <div class="content">
+                  <h4>Phone Number</h4>
+                  <p>+880 1575-267698</p>
+                  <p>+880 1633-914046</p>
+                </div>
+              </div>
+
+              <div class="info-item" data-aos="fade-up" data-aos-delay="500">
+                <div class="icon-box">
+                  <i class="bi bi-envelope"></i>
+                </div>
+                <div class="content">
+                  <h4>Email Address</h4>
+                  <p>info@hsjb.info</p>
+                </div>
+              </div>
+
+              <div class="info-item" data-aos="fade-up" data-aos-delay="500">
+                <div class="icon-box">
+                  <i class="bi bi-globe"></i>
+                </div>
+                <div class="content">
+                  <h4>Website</h4>
+                  <p>www.hsjb.info</p>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-7">
+            <div class="contact-form" data-aos="fade-up" data-aos-delay="300">
+              <h3>Get In Touch</h3>
+
+              <form action="forms/contact.php" method="post" class="php-email-form" data-aos="fade-up" data-aos-delay="200">
+                <div class="row gy-4">
+
+                  <div class="col-md-6">
+                    <input type="text" name="name" class="form-control" placeholder="Your Name" required="">
+                  </div>
+
+                  <div class="col-md-6 ">
+                    <input type="email" class="form-control" name="email" placeholder="Your Email" required="">
+                  </div>
+
+                  <div class="col-12">
+                    <input type="text" class="form-control" name="subject" placeholder="Subject" required="">
+                  </div>
+
+                  <div class="col-12">
+                    <textarea class="form-control" name="message" rows="6" placeholder="Message" required=""></textarea>
+                  </div>
+
+                  <div class="col-12 text-center">
+                    <div class="loading">Loading</div>
+                    <div class="error-message"></div>
+                    <div class="sent-message">Your message has been sent. Thank you!</div>
+
+                    <button type="submit" class="btn">Send Message</button>
+                  </div>
+                </div>
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
+
+    </section><!-- /Contact Section -->
+
+  </main>
 
   <footer id="footer" class="footer position-relative light-background">
     <div class="container">
